2024-09-05 0.5.0-beta2

  * Added sqlite3-3.2 support
  * Added installation instructions for Ubuntu 24.04
  * Added installation instructions for Arch Linux and optional dependencies
  * Improved LastFM Panel functionality
    - Enhanced artist bio section to support both light and dark themes
    - Adjusted layout to prevent scrollbar overlap by repositioning controls on the right side of the panel.
    - Eliminated Events section due to removal of data from the LastFM API
    - Updated default cover art across all sections
    - Adjusted layout to allow for longer text in Top Albums, Top Tracks, Similar Artists, and Similar Tracks
    - Fixed a bug causing exponential increase of '&' symbol for bands with '&' in their name, potentially leading to system crashes
  * Updated rating system icons
    - Changed color of rating stars from black/dark gray to yellow/light gray for better visibility
    - Added black stroke to yellow stars for improved contrast on light themes
  * Fixed bug that crashed guayadeque when scanning aac files tags (aac files does not support tags)
  * Removed compiler warnings
  * General code cleanup and small refactorings

2023-11-23 0.5.0-beta1

  * Added installation instructions for Mageia 9
  * Added Best of playlist generator
  * Added Gstreamer-1.22 and wxwidgets-3.2 support
  * Fullscreen cover view on cover panel click
  * Removed libindicate support
  * Bugfixes

2023-02-24 0.4.7

  * Added to CoverEditor the option to select a cover from a file and also to download it from an url
  * Enable last.fm cover download
  * Updated lyric sources
  * Better gstreamer integration (formats support, audio pipeline reworked)
  * UI changes
  * Bugfixes

2019-06-05 0.4.6

  * Bugfixes

2017-01-08 0.4.5 

  * Added proxy support. Configure it from Preferences->Online

2016-11-17 0.4.3

  * Added audio cd support
  * Reduced the tabs height
  * Moved from Connect to Bind event
  * Fixed magnatune cover download
  * Updated Player Control icons