@@ -40,18 +40,22 @@ PKG_CHECK_MODULES( LIBCURL REQUIRED libcurl )
 
 PKG_CHECK_MODULES( LIBTAG taglib>=1.6.4)
 IF( NOT LIBTAG_FOUND )
-        PKG_CHECK_MODULES( LIBTAG taglib>=1.6.1)
+    PKG_CHECK_MODULES( LIBTAG taglib>=1.6.1)
+    IF( NOT LIBTAG_FOUND )
+        PKG_CHECK_MODULES( LIBTAG taglib>=1.6 )
         IF( NOT LIBTAG_FOUND )
-                PKG_CHECK_MODULES( LIBTAG taglib>=1.6 )
-                IF( NOT LIBTAG_FOUND )
-                        MESSAGE( FATAL_ERROR "taglib 1.6 not found!" )
-                ENDIF( NOT LIBTAG_FOUND )
-        ELSE( NOT LIBTAG_FOUND )
-                ADD_DEFINITIONS(-DTAGLIB_WITH_MP4_COVERS=1)
+            MESSAGE( FATAL_ERROR "taglib 1.6 not found!" )
         ENDIF( NOT LIBTAG_FOUND )
+    ELSE( NOT LIBTAG_FOUND )
+        ADD_DEFINITIONS(-DTAGLIB_WITH_MP4_COVERS=1)
+    ENDIF( NOT LIBTAG_FOUND )
 ELSE( NOT LIBTAG_FOUND )
+    IF(LIBTAG_VERSION LESS 3.0)
         ADD_DEFINITIONS(-DTAGLIB_WITH_MP4_COVERS=1)
         ADD_DEFINITIONS(-DTAGLIB_WITH_APE_SUPPORT=1)
+    ELSE(LIBTAG_VERSION LESS 3.0)
+        MESSAGE(FATAL_ERROR "taglib version must be less than 3.0!")
+    ENDIF(LIBTAG_VERSION LESS 3.0)
 ENDIF( NOT LIBTAG_FOUND )
 
 PKG_CHECK_MODULES( LIBDBUS REQUIRED dbus-1 )
@@ -61,12 +65,12 @@ PKG_CHECK_MODULES( LIBGIO REQUIRED gio-2.0 )
 
 OPTION( ENABLE_IPOD "Enable iPod support by including libgpod support" ON )
 IF( ENABLE_IPOD )
-        PKG_CHECK_MODULES( LIBGPOD libgpod-1.0 )
-        IF( NOT LIBGPOD_FOUND )
-                MESSAGE( " libgpod-dev not found! No iPod support!!" )
-        ELSE( NOT LIBGPOD_FOUND )
-                ADD_DEFINITIONS(-DWITH_LIBGPOD_SUPPORT=1)
-        ENDIF( NOT LIBGPOD_FOUND )
+    PKG_CHECK_MODULES( LIBGPOD libgpod-1.0 )
+    IF( NOT LIBGPOD_FOUND )
+        MESSAGE( " libgpod-dev not found! No iPod support!!" )
+    ELSE( NOT LIBGPOD_FOUND )
+        ADD_DEFINITIONS(-DWITH_LIBGPOD_SUPPORT=1)
+    ENDIF( NOT LIBGPOD_FOUND )
 ENDIF( ENABLE_IPOD )
 
 PKG_CHECK_MODULES( LIBWXSQLITE3 wxsqlite3 )
@@ -75,7 +79,7 @@ IF( NOT LIBWXSQLITE3_FOUND )
 	IF( NOT LIBWXSQLITE33_FOUND )
 		PKG_CHECK_MODULES( LIBWXSQLITE33 wxsqlite3-3.0 )
 		IF( NOT LIBWXSQLITE33_FOUND )
-		        MESSAGE( FATAL_ERROR "wxSqlite3 not found" )
+		    MESSAGE( FATAL_ERROR "wxSqlite3 not found" )
 		ENDIF( NOT LIBWXSQLITE33_FOUND )
 	ENDIF( NOT LIBWXSQLITE33_FOUND )
 ENDIF( NOT LIBWXSQLITE3_FOUND )
@@ -126,9 +130,9 @@ INCLUDE_DIRECTORIES(
 )
 
 IF( PROFILE )
-        ADD_DEFINITIONS( -pg )
-        SET(CMAKE_EXE_LINKER_FLAGS "-pg -g")
-        MESSAGE( "Adding profiling code." )
+    ADD_DEFINITIONS( -pg )
+    SET(CMAKE_EXE_LINKER_FLAGS "-pg -g")
+    MESSAGE( "Adding profiling code." )
 ENDIF( PROFILE )
 
 
@@ -159,4 +163,3 @@ ADD_CUSTOM_TARGET(debug
 
 ADD_CUSTOM_TARGET(release
   ${CMAKE_COMMAND} -DMAKE_BUILD_TYPE:STRING=Release ${PROJECT_SOURCE_DIR})
-
